<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        style="@style/team_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/team_a_text"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/team_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:text="@string/team_b_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <TextView
        android:id="@+id/team_a_score_main"
        style="@style/team_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/team_a_score_default"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/team_b_score_main"
        style="@style/team_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/team_b_score_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/team_a_score_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <view
        android:id="@+id/view3"
        style="@style/vertical_divider"
        class="android.support.constraint.ConstraintLayout"
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addThreeForTeamA"
        android:text="@string/plus_3_score_button"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_score_main" />

    <Button
        android:id="@+id/button2"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addThreeForTeamB"
        android:text="@string/plus_3_score_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <Button
        android:id="@+id/button3"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addTwoForTeamA"
        android:text="@string/plus_2_score_button"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addTwoForTeamB"
        android:text="@string/plus_2_score_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <Button
        android:id="@+id/button5"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addOneForTeamA"
        android:text="@string/plus_1_score_button"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="addOneForTeamB"
        android:text="@string/plus_1_score_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="resetScore"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7"
        app:layout_constraintVertical_bias="0.9" />

    <view
        android:id="@+id/view7"
        class="android.support.constraint.ConstraintLayout"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</android.support.constraint.ConstraintLayout>